# staycation-portal

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  dashboard.py  docker-compose.yml  forms.py  pyproject.toml  requirements.txt  start.sh  staycation.py
app/: __init__.py  app.py  auth.py  book.py  start.sh  users.py
app/assets/data/: booking.csv  users.csv
app/assets/js/: dashboard.js  dashboard_barchart_user.js
app/templates/: bar_chart.html  booking.html  dashboard.html  packages.html  register.html  upload.html
assets/css/: custom.css
assets/data/: staycation.csv
assets/js/: dashboard_barchart_hotel.js
templates/: _render_field.html  base.html  login.html  trend_chart.html
