[tool.poetry]
name = "ict239"
version = "0.1.0"
description = "Full stack web application for staycation booking platform"
authors = ["wtlow003 <wtlow003@suss.edu.sg>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "8.1.2"
dnspython = "2.2.1"
email-validator = "1.1.3"
Flask = "2.1.1"
Flask-Login = "0.6.0"
flask-mongoengine = "1.0.0"
Flask-WTF = "1.0.1"
idna = "3.3"
importlib-metadata = "4.11.3"
itsdangerous = "2.1.2"
Jinja2 = "3.1.1"
MarkupSafe = "2.1.1"
mongoengine = "0.24.1"
mypy-extensions = "0.4.3"
pathspec = "0.9.0"
platformdirs = "2.5.2"
pymongo = "4.1.1"
six = "1.16.0"
tomli = "2.0.1"
typing-extensions = "4.2.0"
Werkzeug = "2.1.1"
WTForms = "3.0.1"
zipp = "3.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
